--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "firebase": "^9.0.2",
+    "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-youtube": "^7.13.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
